# sweepline-intersections

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  outfile.txt  requirements.txt  todo.txt
app/: CMakeLists.txt  app.cpp  main.cpp  utils.cpp
data/: complicated_sample_test.txt  edge_case_another_nested_y.txt  edge_case_coordinate_axes_1.txt  edge_case_horizontal_oblique_cross.txt  edge_case_horizontal_parallel.txt  edge_case_narrowing_downwards.txt  edge_case_star.txt  edge_case_triangle_in_triangle.txt  edge_case_vertical_oblique_cross.txt  edge_case_vertical_parallel.txt  oblique_parallel_lines.txt  parallel_lines.txt  rand1.txt  sample_test.txt  sample_test1.txt  sample_test2.txt  sample_test3.txt  sample_test4.txt  star_at_origin.txt  test.txt
data/edge_cases/: butterfly.txt  close_parallel_lines.txt  coordinate_axes_2.txt  coordinate_axes_3.txt  disappointed_face.txt  grid_lines_with_single_oblique.txt  nested_y.txt  not_intersecting_but_close.txt  origin_intersect_1.txt  origin_intersect_2.txt  origin_intersect_3.txt  parallels_intersect_oblique.txt
data/edge_cases/expected/: grid_lines_with_single_oblique.txt  origin_intersect_2.txt  origin_intersect_3.txt  parallels_intersect_oblique.txt  star.txt
data/expected/: complicated_sample_test.txt  edge_case_another_nested_y.txt  edge_case_butterfly.txt  edge_case_coordinate_axes_2.txt  edge_case_horizontal_oblique_cross.txt  edge_case_nested_y.txt  edge_case_triangle_in_triangle.txt  oblique_parallel_lines.txt  rand1.txt  sample_test1.txt  sample_test2.txt  sample_test3.txt  star_at_origin.txt
docs/: CMakeLists.txt  mainpage.md
include/BBST/: iterator.tpp  red_black_tree.tpp  red_black_tree_impl.tpp
include/geometry/: constants.hpp  event.hpp  point.hpp  segment.hpp
include/geometry/sweepline_intersections/: sweepline_intersections.hpp
include/rbtree/: iterator.tpp  rbtree.tpp  rbtree_impl.tpp
include/red_black_tree/: red_black_tree.tpp  red_black_tree_impl.tpp
include/sweepline/: event.hpp  sweepline.hpp
include/sweepline/geometry/: constants.hpp  event.hpp  point.hpp  segment.hpp
include/utils/: utils.hpp  utils.hpp.in
report/: benchmark.csv  report.html  report.ipynb
scripts/: run.py  run.py.in  stress_rbtree.sh
src/: CMakeLists.txt  lib.cpp
src/BBST/: CMakeLists.txt
src/geometry/: CMakeLists.txt  event.cpp  point.cpp  segment.cpp
src/geometry/sweepline_intersections/: sweepline_intersections.cpp
src/rbtree/: CMakeLists.txt
src/sweepline/: CMakeLists.txt  event.cpp  sweepline.cpp
src/sweepline/geometry/: CMakeLists.txt  event.cpp  point.cpp  segment.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt  find_intersections_test.cpp  testlib.cpp
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/benchmark/generators/: oblique_grid.cpp  origin_star.cpp
tests/benchmark/include/: generators.hpp
tests/find_intersections/: CMakeLists.txt  find_intersections_test.cpp
tests/red_black_tree/: CMakeLists.txt  generator.cpp  red_black_tree.cpp  stl_set.cpp
